# macro-friction

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  main.cpp  rigidBodySim.pro
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: AlignedBox.h.08B36C36965F13B4.idx  All.D3ACDBA09E578C6D.idx  AngleAxis.h.495702BFBB4CFB1A.idx  Array.h.5FDECAB07D837C16.idx  ArrayBase.h.4E720F8F8F6C1A2A.idx  ArrayCwiseBinaryOps.h.E8D0896D07A0173F.idx  ArrayCwiseUnaryOps.h.CCCB770544475451.idx  ArrayWrapper.h.FE723906A91D7308.idx  Assign.h.B4D05DA8AC4D3DA9.idx  AssignEvaluator.h.16A8B63AF317AFC5.idx  AssignmentFunctors.h.8826C59D9A1B854A.idx  BDCSVD.h.531C5EFC61CB5979.idx  BandMatrix.h.71E3214DD4AC3A05.idx  BinaryFunctors.h.06E6E98422508A58.idx  BlasUtil.h.5A329E2EE453472F.idx  Block.h.1708884783111B73.idx  BlockHouseholder.h.77C92480D807AFB9.idx  BlockMethods.h.8EC800EA511FE0AD.idx  BooleanRedux.h.B2528C12A9F6C20A.idx  Cholesky.6168C7D27C5179B2.idx  ColPivHouseholderQR.h.205670E9ADD0CD22.idx  CollisionUtils.hpp.66A5E7C09728EEB1.idx  CommaInitializer.h.6CFD9885B2DD39A6.idx  CommonCwiseBinaryOps.h.8CF3C2D1174DDF89.idx  CommonCwiseUnaryOps.h.FFDA20E71AF1364D.idx  CompleteOrthogonalDecomposition.h.78D125B16D73FE02.idx  Complex.h.272EA573D083F1D1.idx  Complex.h.3F89C3BA473EB78E.idx  ComplexEigenSolver.h.6F1A4A7C699206A8.idx  ComplexSchur.h.F51BEC80AEFEAF23.idx  ConditionEstimator.h.CEE9D5237CA61CEE.idx  Constants.h.50256EFFCB8742FD.idx  Contact.cpp.B71940593A30C1A3.idx  Contact.h.C31C0CEE46486705.idx  Core.E93E8225C11FE1D8.idx  CoreEvaluators.h.1357A6247FE291E0.idx  CoreIterators.h.7C86064290B45E19.idx  CwiseBinaryOp.h.13039116CFD56F0B.idx  CwiseNullaryOp.h.1D911F2B0FBC7B43.idx  CwiseTernaryOp.h.5F38CA443681F128.idx  (+371 more)
blender/: texture_friction.blend  texture_friction.json  texture_friction2.json
cmake/: FindJsonCpp.cmake
glsl/: contactTextureShader.frag  contactTextureShader.vert  contactWeightShader.frag  contactWeightShader.vert  depthShader.frag  depthShader.vert
include/: CollisionUtils.hpp  Contact.h  Distance.h  EllipseWidget.h  FBOWidget.h  Geometry.hpp  Joint.h  MainWindow.h  MatrixFreePGS.h  MeshAssets.h  RigidBody.h  RigidBodyRenderer.h  RigidBodySystem.h  Scenarios.hpp  SimViewer.h  SimulationSerializer.h  Spherical.h
matlab/: constNormalMap.m  genThreadTexture.asv  genThreadTexture.m  randomNormalMap.m  sawtoothNormalMap.m  sineNormalMap.m  test_eq374.m  texture1mm.m  textureScript.m
resources/: acrylic_cube.mtl  aniso_rod.mtl  anisotropic_90deg_plane.mtl  anisotropic_plane.mtl  axes.blend  axes.mtl  bolt.blend  bolt.mtl  box.mtl  box_textured.mtl  bunny.mtl  bunny_metal.mtl  bunny_rock.mtl  bunny_smooth.mtl  chain_link.mtl  heavyrough_plane.mtl  lightrough_plane.mtl  long_cylinder.mtl  medrough_plane.mtl  nut.blend  nut.mtl  nut_and_bolt.blend  nut_and_bolt2.blend  oak_cube.mtl  plane.mtl  plane_castiron.mtl  plane_concrete.mtl  plane_sawtooth.mtl  plane_siggraph.mtl  plane_smooth.mtl  plane_steel.mtl  plane_teapot.mtl  plane_wavy.mtl  plane_wavy_90deg.mtl  pvc_cube.mtl  rod_rough.mtl  rod_smooth.mtl  small_sphere.mtl  sphere.mtl  thin_box.mtl  (+2 more)
src/: Contact.cpp  Distance.cpp  EllipseWidget.cpp  FBOWidget.cpp  Joint.cpp  MainWindow.cpp  MatrixFreePGS.cpp  MeshAssets.cpp  OBJLoader.cpp  RigidBody.cpp  RigidBodyRenderer.cpp  RigidBodySystem.cpp  SimViewer.cpp  SimulationSerializer.cpp  Spherical.cpp
